--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
           </div>
 
           <nav>
-            <a href="/">Blog</a>
+            <a href="/">CV</a>
             <a href="/about">About</a>
           </nav>
         </header>
