--- a/Building-nwjs-on-Windows7-64-bit/index.html
+++ b/Building-nwjs-on-Windows7-64-bit/index.html
@@ -51,7 +51,7 @@
           </div>
 
           <nav>
-            <a href="/">Blog</a>
+            <a href="/">CV</a>
             <a href="/about">About</a>
           </nav>
         </header>
