Added CV information
Signed-off-by: Abhijeet Kandalkar <kandalkar.abhijeet58@gmail.com>

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
 
           <nav>
-            <a href="/">CV</a>
+            <a href="/cv">CV</a>
             <a href="/about">About</a>
           </nav>
         </header>
