Update opensource link
Signed-off-by: Abhijeet Kandalkar <kandalkar.abhijeet58@gmail.com>

--- a/404/index.html
+++ b/404/index.html
@@ -41,7 +41,8 @@
           </div>
 
           <nav>
-            <a href="/cv">CV</a>
+            <a href="/opensource">OpenSource</a>
+            <a href="/">CV</a>
             <a href="/about">About</a>
           </nav>
         </header>
