--- a/Building-ffmpeg-form-nwjs-or-chromium-repository/index.html
+++ b/Building-ffmpeg-form-nwjs-or-chromium-repository/index.html
@@ -51,7 +51,8 @@ C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\Tools\Shortcuts
           </div>
 
           <nav>
-            <a href="/cv">CV</a>
+            <a href="/opensource">OpenSource</a>
+            <a href="/">CV</a>
             <a href="/about">About</a>
           </nav>
         </header>
