--- a/cv/index.html
+++ b/cv/index.html
@@ -41,7 +41,8 @@
           </div>
 
           <nav>
-            <a href="/cv">CV</a>
+            <a href="/opensource">OpenSource</a>
+            <a href="/">CV</a>
             <a href="/about">About</a>
           </nav>
         </header>
