Fixed rendering issue
Signed-off-by: Abhijeet Kandalkar <kandalkar.abhijeet58@gmail.com>

--- a/Video-rendering-in-chromium-nwjs/index.html
+++ b/Video-rendering-in-chromium-nwjs/index.html
@@ -203,7 +203,7 @@ Pipeline is completely pull-based and relies on the system clock (vsync) to driv
   <li>FFmpeg works on buffers provided by networks(bufferDataSource)</li>
   <li>FFmpeg can be decomposed to run in threaded implementation for demuxing, decoding and rendering.</li>
   <li>Caching of data is implemented at each filter level.</li>
-  <li>HTML Media Elements like <audio> <video> and Web audio are depends on chromium-ffmpeg integration. This Media elements uses underlying playback engine (pipeline) and media framework (Ffmpeg).</video></audio></li>
+  <li>HTML Media Elements like audio, video and Web audio are depends on chromium-ffmpeg integration. This Media elements uses underlying playback engine (pipeline) and media framework (Ffmpeg).</li>
   <li>Ffmpeg supports almost all pixel format but Chromium pipeline supports only famous pixel formats.</li>
 </ul>
 
