Pushing generted and new file
Signed-off-by: Abhijeet Kandalkar <kandalkar.abhijeet58@gmail.com>

--- a/Building-ffmpeg-form-nwjs-or-chromium-repository/index.html
+++ b/Building-ffmpeg-form-nwjs-or-chromium-repository/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Building ffmpeg form nwjs/chromium repository – Abhijeet Kandalkar – C++ developer and Open Source contributor in Webkit/Chromium. Learning Big DATA!!!</title>
+    <title>Building ffmpeg form nwjs/chromium repository – Abhijeet Kandalkar – C++ developer and Open Source contributor in Webkit/Chromium.</title>
 
         <meta charset="utf-8" />
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
@@ -34,7 +34,7 @@ C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\Tools\Shortcuts
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="Abhijeet Kandalkar - C++ developer and Open Source contributor in Webkit/Chromium. Learning Big DATA!!!" href="/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Abhijeet Kandalkar - C++ developer and Open Source contributor in Webkit/Chromium." href="/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -47,7 +47,7 @@ C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\Tools\Shortcuts
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">Abhijeet Kandalkar</a></h1>
-            <p class="site-description">C++ developer and Open Source contributor in Webkit/Chromium. Learning Big DATA!!!</p>
+            <p class="site-description">C++ developer and Open Source contributor in Webkit/Chromium.</p>
           </div>
 
           <nav>
