--- a/Building-ffmpeg-and-ffplay-on-Windows7-64-bit/index.html
+++ b/Building-ffmpeg-and-ffplay-on-Windows7-64-bit/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Building ffmpeg and ffplay on Windows7 64 bit – Abhijeet Kandalkar – C++ developer and Open Source contributor in Webkit/Chromium. Learning Big DATA!!!</title>
+    <title>Building ffmpeg and ffplay on Windows7 64 bit – Abhijeet Kandalkar – C++ developer and Open Source contributor in Webkit/Chromium.</title>
 
         <meta charset="utf-8" />
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
@@ -34,7 +34,7 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="Abhijeet Kandalkar - C++ developer and Open Source contributor in Webkit/Chromium. Learning Big DATA!!!" href="/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Abhijeet Kandalkar - C++ developer and Open Source contributor in Webkit/Chromium." href="/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -47,7 +47,7 @@
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">Abhijeet Kandalkar</a></h1>
-            <p class="site-description">C++ developer and Open Source contributor in Webkit/Chromium. Learning Big DATA!!!</p>
+            <p class="site-description">C++ developer and Open Source contributor in Webkit/Chromium.</p>
           </div>
 
           <nav>
