--- a/404/index.html
+++ b/404/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>404 - Page not found – Abhijeet Kandalkar – C++ developer and Open Source contributor in Webkit/Chromium.</title>
+    <title>404 - Page not found – Abhijeet Kandalkar – Software Engineer @ Igalia | C++ developer | Open Source contributor in Webkit/Chromium</title>
 
         <meta charset="utf-8" />
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
@@ -9,8 +9,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
 
     
-    <meta name="description" content="C++ developer and Open Source contributor in Webkit/Chromium.">
-    <meta property="og:description" content="C++ developer and Open Source contributor in Webkit/Chromium." />
+    <meta name="description" content="Software Engineer @ Igalia | C++ developer | Open Source contributor in Webkit/Chromium">
+    <meta property="og:description" content="Software Engineer @ Igalia | C++ developer | Open Source contributor in Webkit/Chromium" />
     
     <meta name="author" content="Abhijeet Kandalkar" />
 
@@ -24,7 +24,7 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="Abhijeet Kandalkar - C++ developer and Open Source contributor in Webkit/Chromium." href="/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Abhijeet Kandalkar - Software Engineer @ Igalia | C++ developer | Open Source contributor in Webkit/Chromium" href="/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -37,7 +37,7 @@
 
           <div class="site-info">
             <h1 class="site-name"><a href="/">Abhijeet Kandalkar</a></h1>
-            <p class="site-description">C++ developer and Open Source contributor in Webkit/Chromium.</p>
+            <p class="site-description">Software Engineer @ Igalia | C++ developer | Open Source contributor in Webkit/Chromium</p>
           </div>
 
           <nav>
