Blog :  Improve disk read performance

--- a/Up-and-running-WebChimera-with-nwjs-ubuntu/index.html
+++ b/Up-and-running-WebChimera-with-nwjs-ubuntu/index.html
@@ -131,7 +131,7 @@ git clone https://github.com/RSATom/wcjs-ugly-demo.git
 tar -xvzf nwjs-v0.12.0-linux-x64.tar.gz 
 export PATH=/home/abhijeet/work/wcjs-ugly-demo/nwjs-v0.12.0-linux-x64:"$PATH"
 gedit index.html (Edit it to add http or https URL for video)
-</span><span class="err">./run_nwjs.sh</span>
+</span>./run_nwjs.sh
 </code></pre></div></div>
 
 <p><img src="/images/Up-and-running-WebChimera-with-nwjs-ubuntu/WebChimera.png" alt="alt text" title="Up and running WebChimera with nwjs Ubuntu" /></p>
