Blog: Improve disk read performance
Updated the table of readings.

--- a/Improve-disk-read-performance/index.html
+++ b/Improve-disk-read-performance/index.html
@@ -214,25 +214,121 @@ As you might have noticed above, <code class="language-plaintext highlighter-rou
 </ul>
 
 <p>Below is the result of block-level parsing.
-For B1,
-|  ALL  | MIN | AVG | MAX  | N |
-| ——– | ——– | ——– | ——– | ——– |
-| Q2Q     | 0.000000001 | 0.000069861 | 0.004097547 | 94883 |
-| Q2G     | 0.000000242 | 0.000000543 | 0.000132620 | 94884 |
-| G2I     | 0.000000613 | 0.000001455 | 0.003585980 | 94884 |
-| I2D     | 0.000001399 | 0.000002456 | 0.003777911 | 94884 |
-| D2C     | 0.000133042 | 0.000176883 | 0.001771526 | 23721 |
-| Q2C     | 0.000136308 | 0.000181337 | 0.003968613 | 23721 |</p>
+For B1,</p>
 
-<p>For B2,
-|  ALL  | MIN | AVG | MAX  | N |
-| ——– | ——– | ——– | ——– | ——– |
-| Q2Q | 0.000000001  | 0.000016582 | 0.003283451 | 76171 |
-| Q2G | 0.000000178  | 0.000000228 | 0.000016893 | 76172 |
-| G2I |  0.000000626 | 0.000005904 | 0.000587304 | 76172 |
-| I2D |  0.000002011 | 0.000007582 | 0.000861783 | 76172 |
-| D2C | 0.000004959  | 0.000067955 | 0.001275667 | 19043 |
-| Q2C | 0.000009132  | 0.000081670 | 0.001315828 | 19043 |</p>
+<table>
+  <thead>
+    <tr>
+      <th>ALL</th>
+      <th>MIN</th>
+      <th>AVG</th>
+      <th>MAX</th>
+      <th>N</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Q2Q</td>
+      <td>0.000000001</td>
+      <td>0.000069861</td>
+      <td>0.004097547</td>
+      <td>94883</td>
+    </tr>
+    <tr>
+      <td>Q2G</td>
+      <td>0.000000242</td>
+      <td>0.000000543</td>
+      <td>0.000132620</td>
+      <td>94884</td>
+    </tr>
+    <tr>
+      <td>G2I</td>
+      <td>0.000000613</td>
+      <td>0.000001455</td>
+      <td>0.003585980</td>
+      <td>94884</td>
+    </tr>
+    <tr>
+      <td>I2D</td>
+      <td>0.000001399</td>
+      <td>0.000002456</td>
+      <td>0.003777911</td>
+      <td>94884</td>
+    </tr>
+    <tr>
+      <td>D2C</td>
+      <td>0.000133042</td>
+      <td>0.000176883</td>
+      <td>0.001771526</td>
+      <td>23721</td>
+    </tr>
+    <tr>
+      <td>Q2C</td>
+      <td>0.000136308</td>
+      <td>0.000181337</td>
+      <td>0.003968613</td>
+      <td>23721</td>
+    </tr>
+  </tbody>
+</table>
+
+<p>For B2,</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>ALL</th>
+      <th>MIN</th>
+      <th>AVG</th>
+      <th>MAX</th>
+      <th>N</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Q2Q</td>
+      <td>0.000000001</td>
+      <td>0.000016582</td>
+      <td>0.003283451</td>
+      <td>76171</td>
+    </tr>
+    <tr>
+      <td>Q2G</td>
+      <td>0.000000178</td>
+      <td>0.000000228</td>
+      <td>0.000016893</td>
+      <td>76172</td>
+    </tr>
+    <tr>
+      <td>G2I</td>
+      <td>0.000000626</td>
+      <td>0.000005904</td>
+      <td>0.000587304</td>
+      <td>76172</td>
+    </tr>
+    <tr>
+      <td>I2D</td>
+      <td>0.000002011</td>
+      <td>0.000007582</td>
+      <td>0.000861783</td>
+      <td>76172</td>
+    </tr>
+    <tr>
+      <td>D2C</td>
+      <td>0.000004959</td>
+      <td>0.000067955</td>
+      <td>0.001275667</td>
+      <td>19043</td>
+    </tr>
+    <tr>
+      <td>Q2C</td>
+      <td>0.000009132</td>
+      <td>0.000081670</td>
+      <td>0.001315828</td>
+      <td>19043</td>
+    </tr>
+  </tbody>
+</table>
 
 <ul>
   <li>Number of read requests(N) are more for B1 than B2.
