--- a/Exploring-sandboxing-in-CEF-and-CEFSharp/index.html
+++ b/Exploring-sandboxing-in-CEF-and-CEFSharp/index.html
@@ -115,11 +115,11 @@ CEFClient(C++)
 
 <p>The following call stack illustrates how CEFClient code calls into CEF, ultimately transitioning into the Chromium environment to configure the sandbox.</p>
 
-<p><img src="https://notes.igalia.com/uploads/bd290d80-d51f-4772-8e24-dc57ee73ba47.png" alt="" /></p>
+<p><img src="/images/Exploring-sandboxing-in-CEF-and-CEFSharp/bd290d80-d51f-4772-8e24-dc57ee73ba47.png" alt="" /></p>
 
 <p>The CEF test application (CEFClient) successfully launches a sandboxed CEF, which is verified by loading the <code class="language-plaintext highlighter-rouge">chrome://sandbox</code> URL.</p>
 
-<p><img src="https://notes.igalia.com/uploads/cb0b3336-4af7-49b1-82ed-2e1abccc2e38.png" alt="" /></p>
+<p><img src="/images/Exploring-sandboxing-in-CEF-and-CEFSharp/cb0b3336-4af7-49b1-82ed-2e1abccc2e38.png" alt="" /></p>
 
 <hr />
 
