[WebXR] Updated images for blog

--- a/WebXR-on-Windows/index.html
+++ b/WebXR-on-Windows/index.html
@@ -100,10 +100,12 @@
 <h3 id="launch-webvr-application">Launch WebVR application</h3>
 <p>Launch chromium and Open : https://immersive-web.github.io/webxr-samples/immersive-vr-session.html</p>
 
-<p><img src="https://matrix.igalia.com/_matrix/media/v3/download/igalia.com/PBDrNUfMiATtyGJiThKkfdMz?allow_redirect=true" alt="output" /></p>
+<p><img src="/images/WebXR-on-Windows/output.jpg" alt="output" title="WebXR on Windows" /></p>
 
 <h3 id="callstack">CallStack</h3>
+<p>When we call <code class="language-plaintext highlighter-rouge">navigator.xr.requestSession("immersive-vr");</code> from Javascript, below call stack get triggered.</p>
 
+<p><img src="/images/WebXR-on-Windows/callstack.png" alt="callstack" title="WebXR on Windows" /></p>
 
   </div>
 
