Improve RSS feed

--- a/WebXR-on-Windows/index.html
+++ b/WebXR-on-Windows/index.html
@@ -82,7 +82,9 @@
 <a href="https://learn.microsoft.com/en-us/windows/mixed-reality/develop/advanced-concepts/using-the-windows-mixed-reality-simulator#enabling-the-windows-mixed-reality-simulator">Using the Windows Mixed Reality Simulator</a></li>
 </ol>
 
-<p>If you encounter hardware compatibility errors, refer to the troubleshooting steps in the guide.</p>
+<p>If you encounter hardware compatibility errors, refer to the troubleshooting steps in the guide below.</p>
+
+<p>https://www.thewindowsclub.com/disable-hardware-requirement-checks-for-mixed-reality-portal</p>
 
 <h3 id="connecting-chromium-to-openxr-implementation">Connecting Chromium to OpenXR Implementation</h3>
 <p>Chromium provides a flag to select the OpenXR implementation.</p>
